--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.profiles.active=dev
 
 # Spring MVC
 spring.view.prefix=/WEB-INF/views/
+spring.view.suffix=.jsp
 
 
 ### DATABASE PROPERTIES ###
