--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,17 @@ spring.view.suffix=.jsp
 
 
 ### DATABASE PROPERTIES ###
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/java-qcm
-spring.datasource.username=java-qcm
-spring.datasource.password=java-qcm
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://florianlopes.fr:3306/java-qcm
+#spring.datasource.username=java-qcm
+#spring.datasource.password=fk827P&#ge83!$(#\
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://ec2-54-83-204-244.compute-1.amazonaws.com:5432/d7ksvbv6dg002d
+spring.datasource.username=hrxkoizwyqugrl
+spring.datasource.password=8Y4vGn80-Za5a4bQ1-RNerZjTK
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
