--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<postgresql.version>9.1-901-1.jdbc4</postgresql.version>
 		<commons-dbcp.version>1.4</commons-dbcp.version>
 		<commons-lang.version>2.6</commons-lang.version>
+		<hibernate-ehcache.version>4.3.7.Final</hibernate-ehcache.version>
 
 		<jstl.version>1.2</jstl.version>
 		<javax.el.version>2.2</javax.el.version>
@@ -49,6 +50,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${spring.security.taglibs.version}</version>
@@ -62,9 +68,21 @@
 		</dependency>
 
 		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>${postgresql.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>${commons-lang.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+			<version>${hibernate-ehcache.version}</version>
 		</dependency>
 
 		<!-- Jstl -->
