--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,16 @@ spring.jpa.hibernate.ddl-auto=update
 security.user.name=admin
 security.user.password=admin
 security.user.role=ADMIN
+
+
+### QCM ADMINISTRATION ###
+qcm.administration.email=admin@admin.fr
+qcm.administration.password=admin
+qcm.administration.firstname=admin
+qcm.administration.lastname=admin
+qcm.administration.grades=B1,B2,L3,EXP1,EXP2
+qcm.administration.courses=Java
+
+### QCM DATABASE ###
+qcm.database.initialize=true
+qcm.database.roles=ROLE_ADMIN,ROLE_TEACHER,ROLE_STUDENT
