--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,6 +32,10 @@ security.user.name=admin
 security.user.password=admin
 security.user.role=ADMIN
 
+### QCM DATABASE ###
+qcm.database.initialize=false
+qcm.database.roles=ROLE_ADMIN,ROLE_TEACHER,ROLE_STUDENT
+
 
 ### QCM ADMINISTRATION ###
 qcm.administration.email=admin@admin.fr
@@ -40,7 +44,3 @@ qcm.administration.firstname=admin
 qcm.administration.lastname=admin
 qcm.administration.grades=B1,B2,L3,EXP1,EXP2
 qcm.administration.courses=Java
-
-### QCM DATABASE ###
-qcm.database.initialize=true
-qcm.database.roles=ROLE_ADMIN,ROLE_TEACHER,ROLE_STUDENT
