--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 
 		<jstl.version>1.2</jstl.version>
 		<javax.el.version>2.2</javax.el.version>
+		<javax.servlet.jsp.version>2.1</javax.servlet.jsp.version>
 		<java.version>1.7</java.version>
 	</properties>
 
@@ -90,6 +91,13 @@
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>${javax.servlet.jsp.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
