--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<start-class>com.ingesup.java.qcm.JavaQcmApplication</start-class>
 
-		<spring.security.taglibs.version>3.2.5.RELEASE</spring.security.taglibs.version>
+        <spring.security.version>3.2.5.RELEASE</spring.security.version>
+        <spring.security-test.version>4.0.0.RC1</spring.security-test.version>
+        <spring.security.taglibs.version>3.2.5.RELEASE</spring.security.taglibs.version>
 
 		<mysql.version>5.1.28</mysql.version>
 		<postgresql.version>9.1-901-1.jdbc4</postgresql.version>
@@ -60,6 +62,12 @@
 			<artifactId>spring-security-taglibs</artifactId>
 			<version>${spring.security.taglibs.version}</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>${spring.security-test.version}</version>
+        </dependency>
 
 		<!-- Mysql Connector Java -->
 		<dependency>
@@ -118,6 +126,17 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>http://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 	<build>
 		<plugins>
