--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,11 @@
 ### GLOBAL PROPERTIES ###
 server.port=80
 
+### LOGGING
+logging.level.org.springframework=ERROR
+logging.level.org.hibernate=ERROR
+logging.level.com.ingesup.java.qcm=INFO
+
 
 # PROFILES
 spring.profiles.active=test
@@ -10,7 +15,7 @@ spring.view.prefix=/WEB-INF/views/
 spring.view.suffix=.jsp
 
 spring.datasource.driverClassName=org.hsqldb.jdbcDriver
-spring.datasource.url=jdbc:hsqldb:~/testdb
+spring.datasource.url=jdbc:hsqldb:mem:java-qcm
 spring.datasource.username=sa
 spring.datasource.password=
 
