--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 ### GLOBAL PROPERTIES ###
 server.port=80
 
+### LOGGING
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=INFO
+logging.level.com.ingesup.java.qcm=INFO
 
 # PROFILES
 spring.profiles.active=dev
