--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=80
 ### LOGGING
 logging.level.org.springframework=INFO
 logging.level.org.hibernate=INFO
-logging.level.com.ingesup.java.qcm=INFO
+logging.level.com.ingesup.java.qcm=DEBUG
 
 # PROFILES
 spring.profiles.active=dev
