--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=80
 
 ### LOGGING
-logging.level.org.springframework=INFO
+logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=INFO
 logging.level.com.ingesup.java.qcm=DEBUG
 
@@ -13,13 +13,19 @@ spring.profiles.active=dev
 spring.view.prefix=/WEB-INF/views/
 spring.view.suffix=.jsp
 
+### DataSource properties ###
+qcm.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+qcm.datasource.url=jdbc:mysql://localhost:3306/java-qcm
+qcm.datasource.username=java-qcm
+qcm.datasource.password=java-qcm
 
-### DATABASE PROPERTIES ###
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/java-qcm
-spring.datasource.username=java-qcm
-spring.datasource.password=java-qcm
+qcm.datasource.cachePrepStmts=true
+qcm.datasource.prepStmtCacheSize=250
+qcm.datasource.prepStmtCacheSqlLimit=2048
+qcm.datasource.useServerPrepStmts=true
+qcm.datasource.maximumPoolSize=100
 
+### PGSQL version ###
 #spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://ec2-54-83-204-244.compute-1.amazonaws.com:5432/d7ksvbv6dg002d
 #spring.datasource.username=hrxkoizwyqugrl
