Format evaluationDate + Add heroku properties file + Procfile

--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,23 +1,17 @@
-### GLOBAL PROPERTIES ###
-server.port=80
-
 ### LOGGING
 logging.level.org.springframework=INFO
 logging.level.org.hibernate=INFO
-logging.level.com.ingesup.java.qcm=DEBUG
-
-# PROFILES
-spring.profiles.active=dev
+logging.level.com.ingesup.java.qcm=INFO
 
 # Spring MVC
 spring.view.prefix=/WEB-INF/views/
 spring.view.suffix=.jsp
 
 ### DataSource properties ###
-qcm.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-qcm.datasource.url=jdbc:mysql://localhost:3306/java-qcm
-qcm.datasource.username=java-qcm
-qcm.datasource.password=java-qcm
+qcm.datasource.dataSourceClassName=org.postgresql.ds.jdbc4.AbstractJdbc4SimpleDataSource
+qcm.datasource.url=jdbc:postgresql://ec2-54-247-178-94.eu-west-1.compute.amazonaws.com:5432/d49vbnaklhfv6t
+qcm.datasource.username=eqftqpeegxkyxa
+qcm.datasource.password=ArpycYLuGOTBn-pUEuoewIz6oT
 
 qcm.datasource.cachePrepStmts=true
 qcm.datasource.prepStmtCacheSize=250
@@ -25,14 +19,8 @@ qcm.datasource.prepStmtCacheSqlLimit=2048
 qcm.datasource.useServerPrepStmts=true
 qcm.datasource.maximumPoolSize=100
 
-### PGSQL version ###
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://ec2-54-83-204-244.compute-1.amazonaws.com:5432/d7ksvbv6dg002d
-#spring.datasource.username=hrxkoizwyqugrl
-#spring.datasource.password=8Y4vGn80-Za5a4bQ1-RNerZjTK
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
@@ -43,7 +31,7 @@ security.user.password=admin
 security.user.role=ADMIN
 
 ### QCM DATABASE ###
-qcm.database.initialize=false
+qcm.database.initialize=true
 qcm.database.roles=ROLE_ADMIN,ROLE_TEACHER,ROLE_STUDENT
 
 
