--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -8,10 +8,10 @@ spring.view.prefix=/WEB-INF/views/
 spring.view.suffix=.jsp
 
 ### DataSource properties ###
-qcm.datasource.dataSourceClassName=org.postgresql.ds.jdbc4.AbstractJdbc4SimpleDataSource
-qcm.datasource.url=jdbc:postgresql://ec2-54-247-178-94.eu-west-1.compute.amazonaws.com:5432/d49vbnaklhfv6t
-qcm.datasource.username=eqftqpeegxkyxa
-qcm.datasource.password=ArpycYLuGOTBn-pUEuoewIz6oT
+qcm.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+qcm.datasource.url=jdbc:mysql://localhost:3306/java-qcm
+qcm.datasource.username=java-qcm
+qcm.datasource.password=java-qcm
 
 qcm.datasource.cachePrepStmts=true
 qcm.datasource.prepStmtCacheSize=250
@@ -31,7 +31,7 @@ security.user.password=admin
 security.user.role=ADMIN
 
 ### QCM DATABASE ###
-qcm.database.initialize=true
+qcm.database.initialize=false
 qcm.database.roles=ROLE_ADMIN,ROLE_TEACHER,ROLE_STUDENT
 
 
