--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,11 +13,12 @@ spring.profiles.active=dev
 spring.view.prefix=/WEB-INF/views/
 spring.view.suffix=.jsp
 
-### DataSource properties ###
+#### DataSource properties ###
 qcm.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 qcm.datasource.url=jdbc:mysql://localhost:3306/java-qcm
 qcm.datasource.username=java-qcm
 qcm.datasource.password=java-qcm
+
 
 qcm.datasource.cachePrepStmts=true
 qcm.datasource.prepStmtCacheSize=250
