--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -9,9 +9,9 @@ spring.view.suffix=.jsp
 
 ### DataSource properties ###
 qcm.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-qcm.datasource.url=jdbc:mysql://localhost:3306/java-qcm
-qcm.datasource.username=java-qcm
-qcm.datasource.password=java-qcm
+qcm.datasource.url=jdbc:mysql://o172rlijczzc5wer.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/heroku_app_db
+qcm.datasource.username=osinl9rcyzs8cs5s
+qcm.datasource.password=q9bfhrr8no3bwlxg
 
 qcm.datasource.cachePrepStmts=true
 qcm.datasource.prepStmtCacheSize=250
@@ -31,7 +31,7 @@ security.user.password=admin
 security.user.role=ADMIN
 
 ### QCM DATABASE ###
-qcm.database.initialize=false
+qcm.database.initialize=true
 qcm.database.roles=ROLE_ADMIN,ROLE_TEACHER,ROLE_STUDENT
 
 
