Update Heroku DB properties for mysql cleardb

--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -9,9 +9,9 @@ spring.view.suffix=.jsp
 
 ### DataSource properties ###
 qcm.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-qcm.datasource.url=jdbc:mysql://o172rlijczzc5wer.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/heroku_app_db
-qcm.datasource.username=osinl9rcyzs8cs5s
-qcm.datasource.password=q9bfhrr8no3bwlxg
+qcm.datasource.url=jdbc:mysql://eu-cdbr-west-01.cleardb.com/heroku_2d51eea41e3f069?reconnect=true
+qcm.datasource.username=be8e87ce0316dc
+qcm.datasource.password=3d165a5d
 
 qcm.datasource.cachePrepStmts=true
 qcm.datasource.prepStmtCacheSize=250
