--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -22,7 +22,7 @@ qcm.datasource.maximumPoolSize=9
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 ### SECURITY PROPERTIES ###
@@ -31,7 +31,7 @@ security.user.password=admin
 security.user.role=ADMIN
 
 ### QCM DATABASE ###
-qcm.database.initialize=true
+qcm.database.initialize=false
 qcm.database.roles=ROLE_ADMIN,ROLE_TEACHER,ROLE_STUDENT
 
 
