--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,7 +1,7 @@
 ### LOGGING
-logging.level.org.springframework=INFO
+logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=INFO
-logging.level.com.ingesup.java.qcm=INFO
+logging.level.com.ingesup.java.qcm=DEBUG
 
 # Spring MVC
 spring.view.prefix=/WEB-INF/views/
