Update app logs for Heroku

--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -4,7 +4,7 @@ logging.level.org.hibernate=INFO
 logging.level.com.ingesup.java.qcm=DEBUG
 
 # Spring MVC
-spring.view.prefix=/WEB-INF/views/
+spring.view.prefix=WEB-INF/views/
 spring.view.suffix=.jsp
 
 ### DataSource properties ###
