--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=80
 
 ### LOGGING
-logging.level.org.springframework=INFO
+logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=INFO
 logging.level.com.ingesup.java.qcm=DEBUG
 
@@ -25,13 +25,6 @@ qcm.datasource.prepStmtCacheSize=250
 qcm.datasource.prepStmtCacheSqlLimit=2048
 qcm.datasource.useServerPrepStmts=true
 qcm.datasource.maximumPoolSize=100
-
-### PGSQL version ###
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://ec2-54-83-204-244.compute-1.amazonaws.com:5432/d7ksvbv6dg002d
-#spring.datasource.username=hrxkoizwyqugrl
-#spring.datasource.password=8Y4vGn80-Za5a4bQ1-RNerZjTK
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
