--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -19,6 +19,20 @@ spring.datasource.url=jdbc:hsqldb:mem:java-qcm
 spring.datasource.username=sa
 spring.datasource.password=
 
+#### DataSource properties ###
+qcm.datasource.dataSourceClassName=org.hsqldb.jdbc.JDBCDataSource
+qcm.datasource.url=jdbc:hsqldb:mem:java-qcm
+qcm.datasource.username=sa
+qcm.datasource.password=
+
+
+qcm.datasource.cachePrepStmts=true
+qcm.datasource.prepStmtCacheSize=250
+qcm.datasource.prepStmtCacheSqlLimit=2048
+qcm.datasource.useServerPrepStmts=true
+qcm.datasource.maximumPoolSize=100
+
+
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create-drop
