--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -26,14 +26,8 @@ qcm.datasource.username=sa
 qcm.datasource.password=
 
 
-qcm.datasource.cachePrepStmts=true
-qcm.datasource.prepStmtCacheSize=250
-qcm.datasource.prepStmtCacheSqlLimit=2048
-qcm.datasource.useServerPrepStmts=true
-qcm.datasource.maximumPoolSize=100
-
 
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 
