Add link to users for grades view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,4 +47,4 @@ qcm.administration.password=admin
 qcm.administration.firstname=admin
 qcm.administration.lastname=admin
 qcm.administration.grades=B1,B2,L3,EXP1,EXP2
-qcm.administration.courses=Java
+qcm.administration.courses=Java,C,C#,Ruby
