Add loggers + edit question

--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,6 +1,6 @@
 ### LOGGING
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=INFO
+logging.level.org.springframework=ERROR
+logging.level.org.hibernate=ERROR
 logging.level.com.ingesup.java.qcm=DEBUG
 
 # Spring MVC
