--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=80
 
 ### LOGGING
 logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=INFO
+logging.level.org.hibernate=ERROR
 logging.level.com.ingesup.java.qcm=DEBUG
 
 # PROFILES
