--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -25,7 +25,7 @@ qcm.datasource.url=jdbc:hsqldb:mem:java-qcm
 qcm.datasource.username=sa
 qcm.datasource.password=
 
-
+qcm.database.initialize=false
 
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
 spring.jpa.show-sql=false
