--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### GLOBAL PROPERTIES ###
-server.port=80
+server.port=8080
 
 ### LOGGING
 logging.level.org.springframework=DEBUG
@@ -9,15 +9,12 @@ logging.level.com.ingesup.java.qcm=DEBUG
 # PROFILES
 spring.profiles.active=dev
 
-# Spring MVC
-spring.view.prefix=/WEB-INF/views/
-spring.view.suffix=.jsp
 
 #### DataSource properties ###
 qcm.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-qcm.datasource.url=jdbc:mysql://localhost:3306/java-qcm
-qcm.datasource.username=java-qcm
-qcm.datasource.password=java-qcm
+qcm.datasource.url=jdbc:mysql://localhost:3306/java_qcm
+qcm.datasource.username=java_qcm
+qcm.datasource.password=java_qcm
 
 
 qcm.datasource.cachePrepStmts=true
