--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 ### LOGGING
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=INFO
 logging.level.org.hibernate=ERROR
 logging.level.com.ingesup.java.qcm=DEBUG
 
