--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.profiles.active=dev
 qcm.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 qcm.datasource.url=jdbc:mysql://localhost:3306/java_qcm
 qcm.datasource.username=java_qcm
-qcm.datasource.password=java_qcm
+qcm.datasource.password=3dE65A5d
 
 
 qcm.datasource.cachePrepStmts=true
