--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -1,8 +1,8 @@
 - name: test
   tag: master
-  service: java-qcm
+  service: javaqcm
   command: mvn clean test
 - name: build
   tag: master
-  service: java-qcm
+  service: javaqcm
   command: mvn clean package
