Closes #4 - Use latest Spring Boot features: - @GetMapping / @PostMapping - Automatic autowire with single constructor - @SpringBootTest / @DataJpaTest

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
     <groupId>com.ingesup.java</groupId>
     <artifactId>java-qcm</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <!-- Packaged as a war due to limitations in JSP support -->
+    <packaging>war</packaging>
 
     <name>java-qcm</name>
     <description>Java QCM</description>
@@ -126,7 +127,12 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
-            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!-- Test dependencies -->
@@ -204,8 +210,19 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>true</fork>
+                </configuration>
             </plugin>
         </plugins>
     </build>
