--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ logging.level.com.ingesup.java.qcm=DEBUG
 # PROFILES
 spring.profiles.active=dev
 
+server.error.whitelabel.enabled=false
 
 #### DataSource properties ###
 qcm.datasource.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
